fix wrap menu in mobile

--- a/css/style.css
+++ b/css/style.css
@@ -792,6 +792,7 @@ button {
   .navbar ul {
     text-align: center;
     justify-content: center;
+    white-space: nowrap;
   }
 
   .navbar h1 {
@@ -926,21 +927,21 @@ nav a:focus {
   opacity: 0.9;
 }
 
-.float{
-	position:fixed;
-	width:60px;
-	height:60px;
-	bottom:40px;
-	right:40px;
-	background-color:#25d366;
-	color:#FFF;
-	border-radius:50px;
-	text-align:center;
-  font-size:30px;
-	box-shadow: 2px 2px 3px #999;
-  z-index:100;
+.float {
+  position: fixed;
+  width: 60px;
+  height: 60px;
+  bottom: 40px;
+  right: 40px;
+  background-color: #25d366;
+  color: #FFF;
+  border-radius: 50px;
+  text-align: center;
+  font-size: 30px;
+  box-shadow: 2px 2px 3px #999;
+  z-index: 100;
 }
 
-.my-float{
-	margin-top:16px;
+.my-float {
+  margin-top: 16px;
 }
